# Understand_Anything_Rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.understand-anything/: meta.json
.understand-anything/tmp/: scan.json  ua-scan-files.json
crates/ua-cli/: Cargo.toml
crates/ua-cli/src/: main.rs
crates/ua-core/: Cargo.toml
crates/ua-core/src/: agent.rs  dashboard.rs  graph.rs  incremental.rs  lib.rs  report.css  report.rs  scanner.rs  types.rs
crates/ua-core/src/parser/: mod.rs
crates/ua-mcp/: Cargo.toml
crates/ua-mcp/src/: main.rs
html/.understand-anything/: meta.json
target_check/: .rustc_info.json
target_check/debug/.fingerprint/proc-macro2-03f53f01c70c7978/: output-build-script-build-script-build
target_check/debug/.fingerprint/quote-b0630561a02d5834/: output-build-script-build-script-build
target_check/debug/.fingerprint/typenum-794e132fd3edda5b/: lib-typenum
target_check/debug/.fingerprint/unicode-ident-d5d6c102c8b1605b/: lib-unicode_ident.json
target_check/debug/.fingerprint/version_check-09576d59a5be6705/: lib-version_check
target_check/debug/.fingerprint/windows-link-1037cdf714bd4810/: lib-windows_link
